--- a/truffle/package.json
+++ b/truffle/package.json
@@ -10,7 +10,8 @@
     "deploy:ganache": "./scripts/bash/ganache/deploy_ganache.sh",
     "deploy:testnet": "./scripts/bash/deploy_testnet.sh",
     "integration-test:local": " truffle test ./test/integration/e2e.test.js --typenet devstand --net1 network1 --net2 network2 --net3 network3",
-    "integration-test:testnet": " truffle test ./test/integration/e2e.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
+    "integration-test:testnet": " truffle test ./test/integration/e2e.bridge.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
+    "e2e.synthesis.testnet": " truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,11 +19,12 @@
   "license": "ISC",
   "dependencies": {
     "@chainlink/contracts": "^0.0.11",
+    "@opengsn/contracts": "^2.2.2",
+    "@openzeppelin/contracts": "^4.1.0",
     "@truffle/hdwallet-provider": "^1.2.0",
     "@uniswap/lib": "^4.0.1-alpha",
     "dotenv": "^8.2.0",
-    "@opengsn/contracts": "^2.2.2",
-    "@openzeppelin/contracts": "^4.1.0"
+    "truffle-plugin-verify": "^0.5.9"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.10",
