--- a/truffle/package.json
+++ b/truffle/package.json
@@ -11,7 +11,7 @@
     "deploy:testnet": "truffle compile --config=truffle-config.v07.js && truffle compile && ./scripts/bash/deploy_testnet.sh",
     "integration-test:local": " truffle test ./test/integration/e2e.test.js --typenet devstand --net1 network1 --net2 network2 --net3 network3",
     "integration-test:testnet": " truffle test ./test/integration/e2e.bridge.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
-    "e2e.synthesis.testnet": " truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
+    "e2e-synthesis:testnet": " truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
