--- a/truffle/package.json
+++ b/truffle/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "deploy:ganache": "./scripts/bash/ganache/deploy_ganache.sh",
-    "deploy:testnet": "truffle compile --config=truffle-config.v07.js && truffle compile && ./scripts/bash/deploy_testnet.sh",
+    "deploy:testnet": "truffle compile --config=truffle-config.v07.js && truffle compile && ./scripts/bash/deploy.sh",
     "integration-test:local": " truffle test ./test/integration/e2e.test.js --typenet devstand --net1 network1 --net2 network2 --net3 network3",
     "integration-test:testnet": " truffle test ./test/integration/e2e.bridge.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
     "e2e-synthesis:testnet": " truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
