--- a/truffle/package.json
+++ b/truffle/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "deploy:ganache": "./scripts/bash/ganache/deploy_ganache.sh",
+    "deploy:ganache": "truffle compile --config=truffle-config.v07.js && truffle compile && truffle migrate --reset --network network1 && npx truffle migrate --reset --network network2 && npx truffle migrate --reset --network network3",
     "deploy:testnet": "truffle compile --config=truffle-config.v07.js && truffle compile && ./scripts/bash/deploy.sh",
     "integration-test:local": " truffle test ./test/integration/e2e.test.js --typenet devstand --net1 network1 --net2 network2 --net3 network3",
     "integration-test:testnet": " truffle test ./test/integration/e2e.bridge.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
-    "e2e-synthesis:testnet": " truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
+    "e2e-synthesis:testnet": "truffle test ./test/integration/e2e.synthesis.gasless.test.js --typenet teststand --net1 rinkeby --net2 bsctestnet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.10",
     "chai": "^4.2.0",
+    "ganache-cli": "^6.12.2",
     "truffle": "^5.1.57"
   }
 }
